--- a/tilingArraySeg/DESCRIPTION
+++ b/tilingArraySeg/DESCRIPTION
@@ -4,7 +4,7 @@ Title: What the package does (short line)
 Version: 0.0.5
 Date: 2013-11-15
 Author: David J Reiss, Institute for Systems Biology
-Maintainer: David J Reiss <dreiss@systemsbiology.org>
+Maintainer: David J Reiss <dreiss.isb@gmail.com.org>
 Description: More about what it does (maybe more than one line)
 License: GPL-2
 Depends: multicore, tree, mvpart 
